operator/pkg/gateway-api/testdata/gateway/gateway-frontend-tls-validation/input/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: invalid-frontend-ca-ref-kind
  namespace: gateway-conformance-infra
  generation: 7
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: Secret
              name: frontend-ca
          mode: AllowValidOnly
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend-configmap-does-not-exist
  namespace: gateway-conformance-infra
  generation: 7
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: ConfigMap
              name: missing-configmap
          mode: AllowValidOnly
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend-configmap-missing-ca-crt-key
  namespace: gateway-conformance-infra
  generation: 7
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: ConfigMap
              name: missing-ca-key
          mode: AllowValidOnly
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend-configmap-ca-crt-empty
  namespace: gateway-conformance-infra
  generation: 7
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: ConfigMap
              name: empty-ca
          mode: AllowValidOnly
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend-configmap-ca-crt-not-pem
  namespace: gateway-conformance-infra
  generation: 7
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: ConfigMap
              name: not-pem-ca
          mode: AllowValidOnly
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: valid-frontend-configmap-reference
  namespace: gateway-conformance-infra
  generation: 7
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: ConfigMap
              name: valid-ca
          mode: AllowValidOnly
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: valid-first-frontend-configmap-ref-invalid-second-ref
  namespace: gateway-conformance-infra
  generation: 7
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: ConfigMap
              name: valid-ca
            - kind: Secret
              name: ignored-frontend-ca
          mode: AllowValidOnly
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: invalid-first-frontend-configmap-ref-valid-second-ref
  namespace: gateway-conformance-infra
  generation: 7
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: Secret
              name: frontend-ca
            - kind: ConfigMap
              name: ignored-frontend-ca
          mode: AllowValidOnly
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: invalid-default-frontend-validation-http-listener
  namespace: gateway-conformance-infra
  generation: 7
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
    - name: http
      port: 80
      protocol: HTTP
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: ConfigMap
              name: missing-configmap
          mode: AllowValidOnly
